# ogre

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h
include/: MainWindow.h  defines.h  entity.h  entitymanager.h  events.h  exceptions.h  game.h  helper_events.h  inputmanager.h  logger.h  pool.h  scene.h  stringable.h  uuid.h  window.h
include/components/: camera.h  light.h
src/: MainWindow.cpp  entity.cpp  entitymanager.cpp  events.cpp  game.cpp  inputmanager.cpp  logger.cpp  main.cpp  scene.cpp  uuid.cpp  window.cpp
src/components/: camera.cpp  light.cpp
